<resources>
    <string name="app_name">MySabertooth</string>
    <string name="action_settings">Settings</string>
    <string name="obt_sdk_app_id">112a90d6-ebf1-4453-b5f8-791cc204e06a</string>
    <string name="obt_sdk_app_key">8e7a5522-7931-4d46-ac3d-bde165f19e58</string>
    <string name="main_instructions">Earn goldfish by brushing. Use goldfish to buy goodies and to become better friends with Saber!</string>
    <string name="brush_instructions">Keep brushing to level up your Saber! It\'ll grow!</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="shop_catnip">catnip</string>
    <string name="shop_chicken">chicken</string>
    <string name="shop_biscuit">biscuit</string>
    <string name="shop_mousey">mousey</string>
    <string name="buy">buy</string>
    <string name="shop_cost_1">1x</string>
    <string name="shop_cost_2">2x</string>
    <string name="shop_cost_3">3x</string>
    <string name="shop_cost_5">5x</string>
</resources>
