<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mysabertooth.mysabertooth.ShopActivity"
    tools:showIn="@layout/activity_shop"
    android:background="@drawable/shop_background">

    <Button
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:id="@+id/btn_back"
        android:background="@drawable/arrow"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:gravity="center">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/shop_catnip"
                        android:background="@drawable/catnip"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/shop_catnip"
                        android:id="@+id/catnip_textView" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/shop_cost_2"
                            android:id="@+id/catnip_cost_textView" />

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="25dp"
                            android:background="@drawable/fish"
                            android:id="@+id/imageView"
                            android:layout_marginBottom="5dp"/>
                    </LinearLayout>

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/buy"
                        android:id="@+id/shop_catnip_buy" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="30dp"
                    android:layout_height="match_parent"></LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/shop_chicken"
                        android:background="@drawable/chicken"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/shop_chicken"
                        android:id="@+id/chicken_textView" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/shop_cost_3"
                            android:id="@+id/chicken_cost_textView" />

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="25dp"
                            android:background="@drawable/fish"
                            android:id="@+id/shop_chicken_currency"
                            android:layout_marginBottom="5dp"/>
                    </LinearLayout>

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/buy"
                        android:id="@+id/shop_chicken_buy" />

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/shop_biscuit"
                        android:background="@drawable/biscuit"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/shop_biscuit"
                        android:id="@+id/biscuit_textView" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/shop_cost_1"
                            android:id="@+id/biscuit_cost_textView" />

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="25dp"
                            android:background="@drawable/fish"
                            android:id="@+id/shop_biscuit_currency"
                            android:layout_marginBottom="5dp"/>
                    </LinearLayout>

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/buy"
                        android:id="@+id/shop_biscuit_buy" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="30dp"
                    android:layout_height="match_parent"></LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/shop_mousey"
                        android:background="@drawable/mouse"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/shop_mousey"
                        android:id="@+id/mousey_textView" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/shop_cost_5"
                            android:id="@+id/mousey_cost_textView" />

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="25dp"
                            android:background="@drawable/fish"
                            android:id="@+id/shop_mousey_currency"
                            android:layout_marginBottom="5dp"/>
                    </LinearLayout>

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/buy"
                        android:id="@+id/shop_mousey_buy" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
